# b2bbtask

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
b2bbtask/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
wallet/: models.py  serializers.py  tests.py  views.py
wallet/migrations/: 0001_initial.py  0001_squashed_0003_alter_transaction_txid.py  0002_alter_transaction_txid.py
